logs/test-run-20260119-101038.log
Running: uv run pytest iopaint/tests/test_budget_limits.py -v
---
============================= test session starts ==============================
platform darwin -- Python 3.12.10, pytest-9.0.2, pluggy-1.6.0 -- /Users/ikovale/Dev/IOPaint-mod/.venv/bin/python3
cachedir: .pytest_cache
rootdir: /Users/ikovale/Dev/IOPaint-mod
configfile: pyproject.toml
plugins: anyio-4.12.1, loguru-0.4.0
collecting ... collected 0 items / 1 error

==================================== ERRORS ====================================
_____________ ERROR collecting iopaint/tests/test_budget_limits.py _____________
.venv/lib/python3.12/site-packages/_pytest/python.py:507: in importtestmodule
    mod = import_path(
.venv/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
../../.local/share/uv/python/cpython-3.12.10-macos-aarch64-none/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
.venv/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.venv/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
../../.local/share/uv/python/cpython-3.12.10-macos-aarch64-none/lib/python3.12/ast.py:52: in parse
    return compile(source, filename, mode, flags,
E     File "/Users/ikovale/Dev/IOPaint-mod/iopaint/tests/test_budget_limits.py", line 86
E       json_str = json.dumps(status.model_dump())
E   IndentationError: unexpected indent
=========================== short test summary info ============================
ERROR iopaint/tests/test_budget_limits.py
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
=============================== 1 error in 0.15s ===============================
---
Command failed with status 2
